--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div id="app">
+    <div id="definitionApp">
       Waiting to load react...
     </div>
     <script type="text/javascript" src="bundle.js"></script>
